--- a/Grpc/AspNetCoreGrpcClient/AspNetCoreGrpcClient.csproj
+++ b/Grpc/AspNetCoreGrpcClient/AspNetCoreGrpcClient.csproj
@@ -14,9 +14,9 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Client" />
+    <Protobuf Include="Protos\greet.proto" />
+    <Protobuf Include="Protos\LuCat.proto" />
   </ItemGroup>
-
   
 
 </Project>
