--- a/src/API.Core/API.Core.csproj
+++ b/src/API.Core/API.Core.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="MiniProfiler.Shared" Version="4.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc5" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="4.5.5" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="5.0.0-rc8" />
   </ItemGroup>
 
   <ItemGroup>
