--- a/src/API.Core/API.Core/appsettings.json
+++ b/src/API.Core/API.Core/appsettings.json
@@ -1,10 +1,103 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "IncludeScopes": false,
+    "Debug": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "Log4Net": {
+      "Name": "API.Core"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "RedisCachingAOP": {
+      "Enabled": false,
+      "ConnectionString": "127.0.0.1:6319"
+    },
+    "MemoryCachingAOP": {
+      "Enabled": true
+    },
+    "LogAOP": {
+      "Enabled": false
+    },
+    "TranAOP": {
+      "Enabled": false
+    },
+    "SqlAOP": {
+      "Enabled": false
+    },
+    "Date": "2018-08-28",
+    "SeedDBEnabled": true, //只生成表结构
+    "SeedDBDataEnabled": true, //生成表,并初始化数据
+    "Author": "Blog.Core"
+  },
+  "MainDB": 1,
+  "DBS": [
+    /*
+      MySql = 0,
+      SqlServer = 1,
+      Sqlite = 2,
+      Oracle = 3,
+      PostgreSQL = 4
+    */
+    {
+      "ConnId": 1,
+      "DBType": 2,
+      "Enabled": true,
+      "Connection": "WMBlog.db" //只写数据库名就行，我会拼接字符串
+    },
+    {
+      "ConnId": 2,
+      "DBType": 1,
+      "Enabled": true,
+      "Connection": "Server=.;Database=WMBlogDB;User ID=sa;Password=123;",
+      "ProviderName": "System.Data.SqlClient"
+    },
+    {
+      "ConnId": 3,
+      "DBType": 0,
+      "Enabled": false,
+      "Connection": "Server=localhost; Port=3306;Stmt=; Database=wmblogdb; Uid=root; Pwd=456;"
+    },
+    {
+      "ConnId": 4,
+      "DBType": 3,
+      "Enabled": false,
+      "Connection": "Provider=OraOLEDB.Oracle; Data Source=WMBlogDB; User Id=sss; Password=789;",
+      "OracleConnection_other1": "User ID=sss;Password=789;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.8.65)(PORT=1521)))(CONNECT_DATA=(SERVICE_NAME = orcl)))"
+    }
+  ],
+  "Audience": {
+    "Secret": "sdfsdfsrty45634kkhllghtdgdfss345t678fs", //不要太短，请注意!!!16+
+    "SecretFile": "C:\\my-file\\blog.core.audience.secret.txt",
+    "Issuer": "Blog.Core",
+    "Audience": "wr"
+  },
+  "Startup": {
+    "Cors": {
+      "IPs": "http://127.0.0.1:2364,http://localhost:2364,http://localhost:8080,http://localhost:8021,http://localhost:1818"
+    },
+    "ApiName": "Blog.Core"
+  },
+  "Middleware": {
+    "RequestResponseLog": {
+      "Enabled": false
+    },
+    "IPLog": {
+      "Enabled": true
+    },
+    "RecordAllLogs": {
+      "Enabled": false
+    },
+    "SignalR": {
+      "Enabled": false
+    }
+  }
 }
