--- a/src/LearningHard/ChainofResponsibility/ChainofResponsibility.csproj
+++ b/src/LearningHard/ChainofResponsibility/ChainofResponsibility.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="automapper" Version="9.0.0" />
+  </ItemGroup>
+
 </Project>
