--- a/src/BinFileUploading/packages.config
+++ b/src/BinFileUploading/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ICSharpCode.SharpZipLib.dll" version="0.85.4.369" targetFramework="net461" />
+  <package id="MaterialDesignColors" version="1.2.2" targetFramework="net461" />
+  <package id="MaterialDesignThemes" version="3.0.1" targetFramework="net461" />
   <package id="RestSharp" version="106.10.1" targetFramework="net461" />
 </packages>
