--- a/src/BinFileUploading/packages.config
+++ b/src/BinFileUploading/packages.config
@@ -3,5 +3,6 @@
   <package id="ICSharpCode.SharpZipLib.dll" version="0.85.4.369" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.2.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="3.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="RestSharp" version="106.10.1" targetFramework="net461" />
 </packages>
