--- a/src/Grpc/GrpcServer.Web/GrpcServer.Web.csproj
+++ b/src/Grpc/GrpcServer.Web/GrpcServer.Web.csproj
@@ -4,4 +4,16 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Portos\Messages.proto" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.28.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Portos\Messages.proto" GrpcServices="Server" />
+  </ItemGroup>
+
 </Project>
