--- a/src/Grpc/GrpcClient/GrpcClient.csproj
+++ b/src/Grpc/GrpcClient/GrpcClient.csproj
@@ -6,12 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="protos\Messages.proto" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.11.4" />
     <PackageReference Include="Grpc.Net.Client" Version="2.28.0" />
+    <PackageReference Include="Grpc.Net.ClientFactory" Version="2.23.2" />
     <PackageReference Include="Grpc.Tools" Version="2.28.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -19,7 +16,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="protos\Messages.proto" GrpcServices="Client" />
+    <Folder Include="protos\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="..\GrpcServer.Web\Portos\Messages.proto" GrpcServices="Client">
+      <Link>Protos\Messages.proto</Link>
+    </Protobuf>
   </ItemGroup>
 
 </Project>
